Fix 'h3, paragraph alignment' on different sections

--- a/css-design-system/resources/css/index.css
+++ b/css-design-system/resources/css/index.css
@@ -119,14 +119,30 @@ section.colors {
       background-color: var(--tertiary);
     }
   }
+
+  & .box-2 {
+    p {
+      text-align: center;
+    }
+  }
 }
 
 section.fonts {
   line-height: 1.3;
   background-color: var(--background);
 
+  h3 {
+    text-align: left;
+    margin-left: 1.25rem;
+    color: var(--main);
+  }
+
   div.fonts__raleway,
   div.fonts__inter {
+    p {
+      text-align: left;
+    }
+
     p:nth-child(3) {
       font-style: italic;
     }
